--- a/Web/assets/css/vault.css
+++ b/Web/assets/css/vault.css
@@ -581,6 +581,13 @@ input {
   padding-bottom: 0.25rem;
 }
 
+@media (prefers-color-scheme: dark) {
+  input {
+    --tw-bg-opacity: 1;
+    background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  }
+}
+
 main {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
